@startuml diagramme-classe-globale
title Diagramme de classes globale -- SolarEase

' Corrections encadrant :
'   • Technicien -> Installateur
'   • Pas de relation Installateur -- Client
'   • Pas de relation Admin -- Client

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam class {
  BackgroundColor   #FAFAFA
  BorderColor       #2C5282
  ArrowColor        #2C5282
  ArrowFontSize     11
}

' =========================
'   IDENTITÉ & ACTEURS
' =========================
class Utilisateur <<abstract>> {
  -id : int
  -nom : String
  -email : String
  -motDePasse : String
  -role : Role
  --
  +seConnecter()
  +seDeconnecter()
}

class OtpToken {
  -id : int
  -token : String
  -expiresAt : Date
  -used : boolean
  --
  +isValid()
}

class RefreshToken {
  -id : int
  -token : String
  -expiresAt : Date
  -revoked : boolean
  --
  +isExpired()
  +revoke()
}

class Installateur {
  -telephone : String
  -adresse : String
  --
  +gererProjets()
  +consulterStatistiques()
}

class Admin {
  --
  +gererUtilisateurs()
  +gererInstallateurs()
  +consulterStatistiques()
}

class Client {
  -telephone : String
  -adresse : String
  --
  +consulterProjets()
  +recevoirDevis()
  +onCreate()
  +onUpdate()
}

' =========================
'   PROJET
' =========================
class Projet {
  -id : int
  -nom : String
  -dateDebut : Date
  -dateFin : Date
  -statut : String
  --
  +ajouterEquipement()
  +genererDevis()
  +onCreate()
  +onUpdate()
}

' =========================
'   COMMERCIAL / DOCUMENTS
' =========================
class Notification {
  -id : int
  -message : String
  -dateEnvoi : Date
  -lu : boolean
  --
  +marquerCommeLue()
}

class Facture {
  -id : int
  -montant : float
  -dateEmission : Date
  -statut : String
  --
  +envoyerAuClient()
  +enregistrerPaiement()
}

class Document {
  -id : int
  -nom : String
  -type : String
  -url : String
  -dateUpload : Date
  --
  +telecharger()
  +supprimer()
}

class Devis {
  -id : int
  -montant : float
  -dateEmission : Date
  -statut : String
  --
  +envoyerAuClient()
  +valider()
  +rejeter()
}

class Rapport {
  -id : int
  -type : String
  -contenu : String
  -dateCreation : Date
  --
  +genererPDF()
}

' =========================
'   DIMENSIONNEMENT
' =========================
class Dimensioning {
  -id : Long
  -projectId : Long
  -status : DimensioningStatus
  -aiRecommendation : String
  -panelType : String
  --
  +calculerDimensionning()
  +compareDimensionings()
}

class RoofCharacteristic {
  -id : int
  -surface : float
  -inclinaison : float
  -orientation : String
  -materiau : String
  --
  +calculerSurface()
}

class SolarInstallation {
  -id : int
  -puissanceTotale : float
  -nombrePanneaux : int
  -rendement : float
  -dateInstallation : Date
  --
  +calculerRendement()
  +genererRapport()
}

class Equipment {
  -id : int
  -type : String
  -marque : String
  -modele : String
  -quantite : int
  -puissance : float
  --
  +getAllEquipements()
  +getEquipementByType()
  +getEquipementById()
}

' ────────────────────────────────────────────
'   RELATIONS
' ────────────────────────────────────────────

' Héritage acteurs
Utilisateur <|-- Installateur
Utilisateur <|-- Admin
Utilisateur <|-- Client

' Authentification
Utilisateur "1" -- "0..*" OtpToken     : génère
Utilisateur "1" -- "0..*" RefreshToken : possède

' Admin supervise les installateurs (pas de lien Admin -- Client)
Admin "1" -- "0..*" Installateur : supervise

' Installateur gère les projets (pas de lien direct Installateur -- Client)
Installateur "1" -- "0..*" Projet : gère

' Projet et client
Client "1" -- "0..*" Projet : concerne

' Artefacts reçus par le client
Client "1" -- "0..*" Notification : reçoit
Client "1" -- "0..*" Facture      : reçoit
Client "1" -- "0..*" Document     : possède

' Production à partir du projet
Projet "1" -- "1..*" Rapport      : produit
Projet "1" -- "1..*" Dimensioning : contient
Projet "1" -- "1..*" Devis        : génère

' Dimensionnement technique
Dimensioning "1" *-- "1" RoofCharacteristic : décrit
Dimensioning "1" *-- "1" SolarInstallation  : définit
Dimensioning "*" -- "1..*" Equipment         : utilise

@enduml
